src/objects/Distribution_List_Member__c.object
<CustomObject>
    <description>This will serve as the junction object between the Distribution List and Contact Objects</description>
    <fields>
        <fullName>Contacts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Distribution List Members</relationshipLabel>
        <relationshipName>Distribution_List_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Distribution_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distribution List</label>
        <referenceTo>Distribution_List__c</referenceTo>
        <relationshipLabel>Distribution List Members</relationshipLabel>
        <relationshipName>Distribution_List_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MDM_ID__c</fullName>
        <externalId>true</externalId>
        <label>MDM ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Distribution List Membership</relationshipLabel>
        <relationshipName>Distribution_List_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Distribution List Member</label>
    <nameField>
        <displayFormat>DLM-{00000}</displayFormat>
        <label>Distribution List Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distribution List Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>